opam-version: "2.0"
name: "dlist2"
version: "0.1"
synopsis: "One-line description"
description: """
Longer description
"""
maintainer: "Darren Ldl <darrenldldev@gmail.com>"
authors: "BYVoid <byvoid@byvoid.com>"
homepage: "https://github.com/darrenldl/Dlist"
license: "BSD-3"
bug-reports: "https://github.com/darrenldl/Dlist/issues"
depends: [ "ocaml" "ocamlfind" ]
build: [
  ["dune" "build" "@install"]
]
